--- a/package.json
+++ b/package.json
@@ -12,13 +12,19 @@
     "@ant-design/icons": "^5.2.6",
     "@react-google-maps/api": "^2.19.2",
     "@reduxjs/toolkit": "^1.9.7",
+    "@types/js-cookie": "^3.0.5",
     "antd": "^5.10.1",
     "axios": "^1.5.1",
     "framer-motion": "^10.16.4",
+    "js-cookie": "^3.0.5",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "next": "13.5.4",
     "react": "^18",
+    "react-darkreader": "^1.5.6",
     "react-dom": "^18",
     "react-linkify": "^1.0.0-alpha",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.1.3",
     "styled-components": "^4.1.3"
   },
