--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "styled-components": "^4.1.3"
   },
   "devDependencies": {
+    "@types/google.maps": "^3.54.8",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
