--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,13 @@
 {
     "cSpell.words": [
+        "Appstore",
         "centered",
         "darkreader",
         "hoverable",
+        "Linkedin",
         "Popover",
-        "Sider"
+        "sider",
+        "Sider",
+        "Youtube"
     ]
 }
