--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@react-google-maps/api": "^2.19.2",
     "@reduxjs/toolkit": "^1.9.7",
     "@types/js-cookie": "^3.0.5",
+    "@vis.gl/react-google-maps": "^0.4.2",
     "antd": "^5.10.1",
     "axios": "^1.5.1",
+    "emoji-picker-react": "^4.5.16",
     "framer-motion": "^10.16.4",
     "js-cookie": "^3.0.5",
     "moment": "^2.29.4",
