--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,8 +14,7 @@
     "sourceType": "module"
   },
   "plugins": [
-    "react",
-    "prettier"
+    "react"
   ],
   "rules": {
     "linebreak-style": "off",
